--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>My page HtML</title>
+    <title>My first page HtML</title>
   </head>
   <body>
     
